--- a/ProjetoCinema.Data/ProjetoCinema.Data.csproj
+++ b/ProjetoCinema.Data/ProjetoCinema.Data.csproj
@@ -4,10 +4,15 @@
     <ProjectReference Include="..\ProjetoCinema.Core\ProjetoCinema.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
 </Project>
