--- a/ProjetoCinema.Web/ProjetoCinema.Web.csproj
+++ b/ProjetoCinema.Web/ProjetoCinema.Web.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\ProjetoCinema.Core\ProjetoCinema.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
