--- a/ProjetoCinema.Web/appsettings.json
+++ b/ProjetoCinema.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "Default": "Server=localhost;Port=5432;Database=CinemaEmCasa;User ID=postgres;Password=root"
+    "Default": "Server=localhost;Port=5432;Database=CinemaEmCasa;User ID=postgres;Password=98562121" 
   }
 }
